@@ -29,10 +29,12 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.nio.channels.FileChannel;
 import java.nio.channels.ReadableByteChannel;
+import java.nio.file.InvalidPathException;
 import java.nio.file.StandardOpenOption;
 import java.security.Permission;
 
 import org.eclipse.jetty.util.IO;
+import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.URIUtil;
 import org.eclipse.jetty.util.log.Log;
 import org.eclipse.jetty.util.log.Logger;
@@ -45,7 +47,7 @@ import org.eclipse.jetty.util.log.Logger;
  * This class can check for aliasing in the filesystem (eg case
  * insensitivity).  By default this is turned on, or it can be controlled 
  * by calling the static method @see FileResource#setCheckAliases(boolean)
- * 
+ *
  * @deprecated Use {@link PathResource}
  */
 @Deprecated
@@ -55,20 +57,21 @@ public class FileResource extends Resource
 
     /* ------------------------------------------------------------ */
     private final File _file;
-    private final String _uri;
+    private final URI _uri;
     private final URI _alias;
     
     /* -------------------------------------------------------- */
     public FileResource(URL url)
-        throws IOException, URISyntaxException
+            throws IOException, URISyntaxException
     {
         File file;
         try
         {
             // Try standard API to convert URL to file.
             file =new File(url.toURI());
+            assertValidPath(file.toString());
         }
-        catch (URISyntaxException e) 
+        catch (URISyntaxException e)
         {
             throw e;
         }
@@ -81,9 +84,9 @@ public class FileResource extends Resource
             try
             {
                 // Assume that File.toURL produced unencoded chars. So try encoding them.
-                String file_url="file:"+URIUtil.encodePath(url.toString().substring(5));           
+                String file_url="file:"+URIUtil.encodePath(url.toString().substring(5));
                 URI uri = new URI(file_url);
-                if (uri.getAuthority()==null) 
+                if (uri.getAuthority()==null)
                     file = new File(uri);
                 else
                     file = new File("//"+uri.getAuthority()+URIUtil.decodePath(url.getFile()));
@@ -100,7 +103,7 @@ public class FileResource extends Resource
         
         _file=file;
         _uri=normalizeURI(_file,url.toURI());
-        _alias=checkFileAlias(_file);
+        _alias=checkFileAlias(_uri,_file);
     }
 
     /* -------------------------------------------------------- */
@@ -108,43 +111,109 @@ public class FileResource extends Resource
     {
         File file=new File(uri);
         _file=file;
-        URI file_uri=_file.toURI();
-        _uri=normalizeURI(_file,uri);
+        try
+        {
+            URI file_uri = _file.toURI();
+            _uri = normalizeURI(_file, uri);
+            assertValidPath(file.toString());
 
-        // Is it a URI alias?
-        if (!URIUtil.equalsIgnoreEncodings(_uri,file_uri.toString()))
-            _alias=_file.toURI();
-        else
-            _alias=checkFileAlias(_file);
+            // Is it a URI alias?
+            if (!URIUtil.equalsIgnoreEncodings(_uri.toASCIIString(), file_uri.toString()))
+                _alias = _file.toURI();
+            else
+                _alias = checkFileAlias(_uri, _file);
+        }
+        catch (URISyntaxException e)
+        {
+            throw new InvalidPathException(_file.toString(), e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
     }
 
     /* -------------------------------------------------------- */
     public FileResource(File file)
     {
+        assertValidPath(file.toString());
         _file=file;
-        _uri=normalizeURI(_file,_file.toURI());
-        _alias=checkFileAlias(_file);
+        try
+        {
+            _uri = normalizeURI(_file, _file.toURI());
+        }
+        catch (URISyntaxException e)
+        {
+            throw new InvalidPathException(_file.toString(), e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
+        _alias=checkFileAlias(_uri,_file);
     }
 
     /* -------------------------------------------------------- */
-    private static String normalizeURI(File file, URI uri)
+    public FileResource(File base, String childPath)
     {
+        String encoded = URIUtil.encodePath(childPath);
+
+        _file = new File(base, childPath);
+
+        // The encoded path should be a suffix of the resource (give or take a directory / )
+        URI uri;
+        try
+        {
+            if (base.isDirectory())
+            {
+                // treat all paths being added as relative
+                uri=new URI(URIUtil.addPaths(base.toURI().toASCIIString(),encoded));
+            }
+            else
+            {
+                uri=new URI(base.toURI().toASCIIString()+encoded);
+            }
+        }
+        catch (final URISyntaxException e)
+        {
+            throw new InvalidPathException(base.toString() + childPath, e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
+
+        _uri=uri;
+        _alias=checkFileAlias(_uri,_file);
+    }
+
+    /* -------------------------------------------------------- */
+    private static URI normalizeURI(File file, URI uri) throws URISyntaxException {
         String u =uri.toASCIIString();
         if (file.isDirectory())
         {
             if(!u.endsWith("/"))
                 u+="/";
-        } 
+        }
         else if (file.exists() && u.endsWith("/"))
             u=u.substring(0,u.length()-1);
-        return u;
+        return new URI(u);
     }
 
     /* -------------------------------------------------------- */
-    private static URI checkFileAlias(File file)
+    private static URI checkFileAlias(final URI uri, final File file)
     {
         try
         {
+            if (!URIUtil.equalsIgnoreEncodings(uri,file.toURI()))
+            {
+                // Return alias pointing to Java File normalized URI
+                return new File(uri).getAbsoluteFile().toURI();
+            }
+
             String abs=file.getAbsolutePath();
             String can=file.getCanonicalPath();
 
@@ -155,8 +224,7 @@ public class FileResource extends Resource
 
                 URI alias=new File(can).toURI();
                 // Have to encode the path as File.toURI does not!
-                String uri="file://"+URIUtil.encodePath(alias.getPath());
-                return new URI(uri);
+                return new URI("file://"+URIUtil.encodePath(alias.getPath()));
             }
         }
         catch(Exception e)
@@ -180,45 +248,29 @@ public class FileResource extends Resource
     /* -------------------------------------------------------- */
     @Override
     public Resource addPath(String path)
-        throws IOException, MalformedURLException
+            throws IOException, MalformedURLException
     {
+        assertValidPath(path);
         path = org.eclipse.jetty.util.URIUtil.canonicalPath(path);
 
         if (path==null)
-            throw new MalformedURLException();   
+            throw new MalformedURLException();
         
         if ("/".equals(path))
             return this;
-        
-        path=URIUtil.encodePath(path);
-        // The encoded path should be a suffix of the resource (give or take a directory / )
-        URI uri;
-        try
-        {
-            if (_file.isDirectory())
-            {
-                // treat all paths being added as relative
-                uri=new URI(URIUtil.addPaths(_uri,path));
-            }
-            else
-            {
-                uri=new URI(_uri+path);
-            }
-        }
-        catch (final URISyntaxException e)
-        {
-            throw new MalformedURLException(e.getMessage())
-            {
-                {
-                    initCause(e);
-                }
-            };
-        }
 
-        return new FileResource(uri);
+        return new FileResource(_file, path);
     }
-   
-    
+
+    private void assertValidPath(String path)
+    {
+        int idx = StringUtil.indexOfControlChars(path);
+        if (idx >= 0)
+        {
+            throw new InvalidPathException(path, "Invalid Character at index " + idx);
+        }
+    }
+
     /* ------------------------------------------------------------ */
     @Override
     public URI getAlias()
@@ -253,7 +305,7 @@ public class FileResource extends Resource
     @Override
     public boolean isDirectory()
     {
-        return _file.exists() && _file.isDirectory() || _uri.endsWith("/");
+        return _file.exists() && _file.isDirectory() || _uri.toASCIIString().endsWith("/");
     }
 
     /* --------------------------------------------------------- */
@@ -311,7 +363,7 @@ public class FileResource extends Resource
      */
     @Override
     public boolean delete()
-        throws SecurityException
+            throws SecurityException
     {
         return _file.delete();
     }
@@ -322,7 +374,7 @@ public class FileResource extends Resource
      */
     @Override
     public boolean renameTo( Resource dest)
-        throws SecurityException
+            throws SecurityException
     {
         if( dest instanceof FileResource)
             return _file.renameTo( ((FileResource)dest)._file);
@@ -343,14 +395,14 @@ public class FileResource extends Resource
         for (int i=list.length;i-->0;)
         {
             if (new File(_file,list[i]).isDirectory() &&
-                !list[i].endsWith("/"))
+                    !list[i].endsWith("/"))
                 list[i]+="/";
         }
         return list;
     }
     
     /* ------------------------------------------------------------ */
-    /** 
+    /**
      * @param o the object to compare against this instance
      * @return <code>true</code> of the object <code>o</code> is a {@link FileResource} pointing to the same file as this resource. 
      */
@@ -374,13 +426,13 @@ public class FileResource extends Resource
     @Override
     public int hashCode()
     {
-       return null == _file ? super.hashCode() : _file.hashCode();
+        return null == _file ? super.hashCode() : _file.hashCode();
     }
     
     /* ------------------------------------------------------------ */
     @Override
     public void copyTo(File destination)
-        throws IOException
+            throws IOException
     {
         if (isDirectory())
         {
@@ -410,7 +462,7 @@ public class FileResource extends Resource
     {
         try
         {
-            return new URL(_uri);
+            return _uri.toURL();
         }
         catch (MalformedURLException e)
         {
@@ -421,13 +473,12 @@ public class FileResource extends Resource
     @Override
     public URI getURI()
     {
-        return _file.toURI();
+        return _uri;
     }
 
     @Override
     public String toString()
     {
-        return _uri;
+        return _uri.toString();
     }
-
 }
